@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c171444365dc44bac1285379ae64d337550abeec ChangeLog
+SHA1 1c2de579cbec473753e5e6812a18b73b94a8f44c ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 dc4860faa9ba3f21626a3dbe34f3673a05aaad62 META.yml
-SHA1 c86cc60c23cf750b4e8c866d3f269709e96c3aa9 Makefile.PL
+SHA1 67a3a6eccdbe3fabeeb17bb5046f2dc596b1579d META.yml
+SHA1 bbdae81187074af6cb6cab87112d6469c8ef8ee2 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 112a0cd553e780a563ce471d94a82981a4bb292f lib/Net/FullAuto.pm
+SHA1 55587e7499342a28bc7be1cfb4903fcebd37b269 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTzTE9AAoJEBa/9Pad787EjI0H+wfP9O05kBpO3QaIHn0Zwlj1
-ywe+5iQyI+K45nEYe7cy69QMGOhD2mlPxOTKip81iQTBO1ttl+zNYxBOxayzDn+L
-Z4w7FqHQB9L+MdRNWx1yWhsGGtMBnWN4sB8peWnbo+AD/PCESu43SacqJ8wSaojK
-mjsiQUjawE+znW2w7wDwyTlTuOBietX8h8sUaXbZF5YLaAtdb1RR/epMu21OISlq
-Rvmf/t0Q2mmfJQglN2fZWGuyzXzefUTG3Nouwelx9J9pIi1uJEwiG6pRU/2kgVhp
-IJntLrKYtknwVelmAz1dpWmF7IrDQWxpxHZYvbhGYenH/tyVKmJxBSP0BYGPlBA=
-=T8xU
+iQEcBAEBAgAGBQJTzVYpAAoJEBa/9Pad787EVXYIAMN0+yn0ueIU4PMfO8S/TjBC
+UPkzNRSSJP5npwaH/ft2ttzHjcTgIdJyjb21ScDb4omwBiPECgd1RxAzrmYcnjAd
+DLTHa3oGiWZ6wbZuQ07aRx3mDzkU9DBOQpDob0TMOutxzntDdUBoxfVDeL6A0PvQ
+vr1CVHbmxA9Fw3e7llqHZ3TIxrkKObAKPsMqEZYiNdGAhw+vDYEZN/aues0XeIqy
+/mIsmUICWIxUe9l1ZHDqXPBqiQHDWOTBCAJQVzcf5ukEjihWaZT1WxLEgSBT1lYD
+oa5CNQVy2NQte+0VPMMlv5wlcav6oFoGuaYoekBqoCpdbAUHEjArQiOye/joZDI=
+=w7Lt
 -----END PGP SIGNATURE-----
