@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999965';
+our $VERSION='0.9999999966';
 
 
 use 5.005;
